# thesis-metrics

./: .gitattributes  .gitignore  .pre-commit-config.yaml  CLAUDE.md  DATASET_CATALOG.md  DSTREAM_README.md  FINDINGS_REPHRASED_PRIVACY.md  ORGANIZATION.md  README.md  REPHRASING.md  pyproject.toml  requirements.txt
configs/: rephrase_config.yaml
configs/attacks/: default.yaml
configs/dataset/: alpacare_dpo.yaml  alpacare_dpo_chained.yaml  alpacare_dpo_chained_v2.yaml  alpacare_dpo_keyword_replaced.yaml  alpacare_dpo_keyword_replaced_v2.yaml  alpacare_dpo_rephrased.yaml  alpacare_dpsft.yaml  alpacare_dpsft_chained.yaml  alpacare_dpsft_chained_v2.yaml  alpacare_dpsft_keyword_replaced.yaml  alpacare_dpsft_keyword_replaced_v2.yaml  alpacare_dpsft_rephrased.yaml  mimic_4pct_dpo2.yaml  mimic_4pct_dpo2_chained.yaml  mimic_4pct_dpo2_chained_v2.yaml  mimic_4pct_dpo2_keyword_replaced.yaml  mimic_4pct_dpo2_keyword_replaced_v2.yaml  mimic_4pct_dpo2_rephrased.yaml  mimic_6pct_dpo2.yaml  mimic_6pct_dpo2_chained.yaml  mimic_6pct_dpo2_chained_v2.yaml  mimic_6pct_dpo2_keyword_replaced.yaml  mimic_6pct_dpo2_keyword_replaced_v2.yaml  mimic_6pct_dpo2_rephrased.yaml
configs/ds_stream/: __init__.py  default.yaml
configs/rephrasing/: default.yaml  generation.yaml  instruction.yaml  keyword_replace.yaml  keyword_replace_v2.yaml
data/alpacare/: create_clusterize_dataset.py  model=0fe1620_size=60000_step=dpo-1.parquet  model=ovs3z1ey_size=60000_step=dp-sft.parquet
data/mimic-iii/: 4%-dpo_1-mh67il8t.parquet  4%-dpo_2-yv5v4516.parquet  4%-sft-mru97w7c.parquet  6%-dpo_1-tg4jsyrw.parquet  6%-dpo_2-8l6avevp.parquet  6%-sft-ofzh3aqu.parquet  create_privacy_dataset.py
data/mimic-iii/pre-processing/: download_gen_score_dataset.py  merge_generated_and_with_proxy.py  run.sh  runs.txt
md/: 2025-11-20_mimic_privacy_evaluation.md  2025-11-20_mimic_rephrasing_analysis.md  2025-11-21_keyword_replacement_vs_rephrasing_comparison.md  2025-11-28_alpacare_utility_evaluation_commands.md  2025-11-28_mimic_icd_utility_evaluation_commands.md
slurm/: alpacare_clustering.slurm  mimic_icd_eval.slurm  privacy_metrics.slurm  thesis_metrics.slurm
thesis_metrics/: __init__.py  cli.py  evaluation.py  privacy_attacks.py  rephrase_cli.py  rephrasing.py  run_privacy_metrics.py  run_thesis_metrics.py  visualization.py
thesis_metrics/cli/: __init__.py  alpacare_eval.py  downstream_eval.py  privacy_metrics.py  rephrase.py
thesis_metrics/configs/: config.yaml
thesis_metrics/configs/dataset/: alpacare_dpsft.yaml
thesis_metrics/core/: __init__.py  evaluation.py  rephrasing.py
thesis_metrics/core/alpacare/: README.md  __init__.py
thesis_metrics/old/: run_privacy_metrics.py
thesis_metrics/utils/: __init__.py  helpers.py  slurm.py
(+7 files in other folders)
