[project]
name = "thesis-metrics"
version = "0.1.0"
description = "Privacy metrics evaluation for synthetic medical data"
authors = [
    {name = "Simon", email = "simonmeoni@aol.com"}
]
readme = "README.md"
requires-python = ">=3.10"
dependencies = [
    "pandas>=2.0.0",
    "pyarrow>=14.0.0",
    "numpy>=1.24.0",
    "scikit-learn>=1.3.0",
    "scipy>=1.11.0",
    "hydra-core>=1.3.0",
    "rich>=13.0.0",
    "plotext>=5.2.0",
    "wandb>=0.16.0",
    "sentence-transformers>=5.1.2",
]

[project.optional-dependencies]
dev = [
    "pytest>=7.4.0",
    "black>=23.0.0",
    "ruff>=0.1.0",
    "ipython>=8.15.0",
]

[tool.black]
line-length = 100
target-version = ['py310']

[tool.ruff]
line-length = 100
target-version = "py310"

[project.scripts]
privacy-metrics = "thesis_metrics.cli:main"

[build-system]
requires = ["setuptools>=68.0"]
build-backend = "setuptools.build_meta"

[tool.setuptools.packages.find]
where = ["."]
include = ["thesis_metrics*"]
exclude = ["data*", "slurm*", "outputs*", "wandb*"]
